--- a/studio/frontend/src/app.html
+++ b/studio/frontend/src/app.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>SyGra Workflow Studio</title>
+		<title>Sygra Studio</title>
 		%sveltekit.head%
 	</head>
 	<body class="h-full bg-surface text-gray-900 dark:bg-gray-950 dark:text-gray-100" data-sveltekit-preload-data="hover">
